--- a/css/Body/reapt.css
+++ b/css/Body/reapt.css
@@ -5,3 +5,40 @@
     margin:  auto;
     max-width: 1200px;
 }
+
+/* botao */
+
+.botao {
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
+.botao a {
+    display: block;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: var(--cor-white);
+    background-color: #32a52e6b;
+    padding: 0.5rem 1rem;
+    font-family: "Roboto", sans-serif;
+    border: 2px solid var(--cor-terciaria);
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+.botao a:hover {
+    background-color: var(--cor-terciaria);
+    border: 2px solid var(--cor-primaria);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    transition: 0.5s linear;
+
+}
+
+.botao a::before {
+    color: white;
+    position: relative;
+    right: 10px;
+    bottom: -2px;
+    content: url(../../img/whatsapp.svg);
+}
