--- a/css/header/header.css
+++ b/css/header/header.css
@@ -1,6 +1,6 @@
 .container {
     padding-top: 1rem;
-    background-color: var(--cor-secundaria);
+    background: linear-gradient(0deg, rgba(0,0,0,0.85) 0%, rgba(12,103,44,1) 100%);;
 }
 
 .container h1 {
@@ -14,41 +14,6 @@
     color: var(--cor-text-first);
 }
 
-.container-cabecalho {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: baseline;
-}
-
-.container-cabecalho a {
-    font-weight: 700;
-    text-transform: uppercase;
-    color: var(--cor-white);
-    background-color: var(--cor-primaria);
-    position: absolute;
-    right: 20px;
-    padding: 0.5rem 1rem;
-    font-family: "Roboto", sans-serif;
-    border: 1px solid var(--cor-terciaria);
-    border-radius: 5px;
-    transition: 1s;
-}
-
-.container-cabecalho a:hover {
-    background-color: var(--cor-terciaria);
-    border: 1px solid var(--cor-primaria);
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-    transition: 1s linear;
-
-}
-
-.container-cabecalho a::before {
-    color: white;
-    position: relative;
-    right: 10px;
-    bottom: -2px;
-    content: url(../../img/whatsapp.svg);
-}
 
 .cabecalho {
     display: flex;
@@ -56,7 +21,7 @@
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    margin-bottom: 1rem;
+    padding-bottom: 1rem;
 }
 
 /* menu */
