--- a/css/main/background.css
+++ b/css/main/background.css
@@ -1,6 +1,80 @@
 .background{
-    height: 1070px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-image:linear-gradient(135deg,rgba(0,0,0,0.92) 0%,rgba(0,0,0,0) 100%),url(../../img/T20.jpg);
+    height: 103vh;
+    max-width: 100%;
 }
+
+
+
+.background-img{
+   z-index: -9999;
+   width: 99.1vw;
+   object-fit: contain;
+
+    position: absolute;
+}
+
+.container-main {
+    padding-top: 150px;
+    margin: 0px 0px 0px 0px;
+    display: flex;
+    
+    position: relative;
+
+}
+
+.main-frase {
+    border: 2px solid;
+    border-radius: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    color: var(--cor-white);
+    width: 35vw;
+    height: 50vh;
+    gap: 50px;
+    padding: 2rem;
+}
+
+.main-frase h1{
+    z-index: 9999;
+    width: 30vw;
+    font-size: 2rem;
+    text-transform: uppercase;
+    font-family: sans-serif;
+}
+
+
+
+
+.main-frase h2 {
+    font-family: sans-serif;
+    z-index: 9999;
+    width: 25vw;
+    margin-bottom: 2rem;
+
+}
+
+.botao a {
+    padding: 1.2rem;
+    background-color: var(--cor-text-first);
+    color: var(--cor-secundaria);
+}
+
+.botao a:hover{
+    background-color: var(--cor-text-first);
+}
+
+
+.main-imagem img {
+    
+    border-radius: 10px;
+    width: 35vw;
+    height: 70vh;
+    position: absolute;
+    right: -50px;
+    top: 100px;
+}
+
+
+
+
