--- a/css/Body/root.css
+++ b/css/Body/root.css
@@ -1,5 +1,5 @@
 :root{
-    --cor-primaria:#3ABF36;
+    --cor-primaria:#3abf36;
     --cor-secundaria: #022601;
     --cor-terciaria: #034001;
     --cor-white: #ffffff;
