--- a/css/main/Beneficios.css
+++ b/css/main/Beneficios.css
@@ -1,3 +1,54 @@
 .Beneficios{
     margin-top: 100px;
 }
+
+.Beneficios h1{
+    font-size: 4rem;
+    margin-bottom: 5rem;
+    color:var(--cor-text-first);
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    position: relative;
+
+}
+
+.Beneficios h1::after{
+    margin-left: 50px;
+    position: absolute;
+    content: url(../../img/icons8-drone-60.png);
+}
+
+
+.container-vantagens{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    
+}
+
+.lista-vantagens{
+    display: flex;
+    gap: 3rem;
+    
+}
+
+.lista-vantagens li p{
+    margin-bottom: 1rem;
+    color:var(--cor-text-first);
+    font-size: 1.2rem;
+    /* font-family: "Source Code Pro", monospace; */
+}
+
+.lista-vantagens li span{
+    color:var(--cor-text-third); 
+}
+
+
+.video{
+    margin-left: 2rem;
+    margin-top: 5rem;
+    width: 50vw;
+    border-radius: 2%;
+}
