--- a/css/Body/reapt.css
+++ b/css/Body/reapt.css
@@ -28,6 +28,7 @@
 }
 
 .botao a:hover {
+    color: var(--cor-white);
     background-color: var(--cor-terciaria);
     border: 2px solid var(--cor-primaria);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
