--- a/css/Style.css
+++ b/css/Style.css
@@ -6,6 +6,8 @@
 
 @import url(./main/background.css);
 @import url(./main/Beneficios.css);
+@import url(./main/localizaçao.css);
+
 
 @import url(./Footer/midias.css);
 
