--- a/css/header/header.css
+++ b/css/header/header.css
@@ -1,6 +1,7 @@
 .container {
     padding-top: 1rem;
-    background: linear-gradient(0deg, rgba(0,0,0,0.85) 0%, rgba(12,103,44,1) 100%);;
+    /* background: linear-gradient(0deg, rgba(0,0,0,0.85) 0%, rgba(12,103,44,1) 100%); */
+    background: linear-gradient(360deg, rgba(3,105,0,1) 0%, rgba(58,191,54,1) 100%);
 }
 
 .container h1 {
