--- a/css/main/Beneficios.css
+++ b/css/main/Beneficios.css
@@ -1,10 +1,10 @@
 .Beneficios{
-    margin-top: 100px;
+    margin-top: 80px;
 }
 
 .Beneficios h1{
     font-size: 4rem;
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
     color:var(--cor-text-first);
     font-family: "Roboto", sans-serif;
     font-weight: 700;
@@ -49,6 +49,11 @@
 .video{
     margin-left: 2rem;
     margin-top: 5rem;
-    width: 50vw;
+    width: 40vw;
     border-radius: 2%;
+}
+
+.img-camargo{
+    z-index: -999;
+    width: 8vw;
 }
