--- a/css/Footer/midias.css
+++ b/css/Footer/midias.css
@@ -1,11 +1,13 @@
 footer{
+    margin-top: 5rem;
     height: 150px;
     
-    background-color: var(--cor-primaria);
 }
 
 .midias ul{
+   
     padding-top: 50px;
     display: flex;
-    gap: 2rem;
+    flex-direction: column;
+    gap: 1rem;
 }
